--- a/index.html
+++ b/index.html
@@ -20,24 +20,30 @@
     <main>
         <div class="card" style="width: 18rem;">
             <div class="card-header"><b>Manager</b></div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                    <li class="list-group-item">A fourth item</li>
-                    <li class="list-group-item">And a fifth one</li>
-                </ul>
-       
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Name </li>
+                <li class="list-group-item">ID </li>
+                <li class="list-group-item">Email </li>
+                <li class="list-group-item">Office </li>
+            </ul>
         </div>
         <div class="card" style="width: 18rem;">
             <div class="card-header"><b>Engineer</b></div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                    <li class="list-group-item">A fourth item</li>
-                    <li class="list-group-item">And a fifth one</li>
-                </ul>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Name </li>
+                <li class="list-group-item">ID </li>
+                <li class="list-group-item">Email</li>
+                <li class="list-group-item">Github</li>
+            </ul>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header"><b>Intern</b></div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Name </li>
+                <li class="list-group-item">ID </li>
+                <li class="list-group-item">Email</li>
+                <li class="list-group-item">School </li>
+            </ul>
         </div>
     </main>
 </body>
