revised html-js

--- a/generatedHTML.html
+++ b/generatedHTML.html
@@ -1,5 +1,5 @@
 
-    < !DOCTYPE html >
+    <!DOCTYPE html >
     <html lang="en">
     
         <head>
@@ -17,30 +17,21 @@
             </header>
             <main> 
         <div class="card" style="width: 18rem;">
-            <div class="card-header"><b>d<b /></div>
+            <div class="card-header"><b> "Manager" g</b></div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">d </li>
-                <li class="list-group-item">f </li>
-                <li class="list-group-item">g </li>
+                <li class="list-group-item">Name g </li>
                 <li class="list-group-item">h </li>
+                <li class="list-group-item">j </li>
+                <li class="list-group-item">k </li>
             </ul>
         </div>
         <div class="card" style="width: 18rem;">
-            <div class="card-header"><b>undefined<b /></div>
+            <div class="card-header"><b>j</b></div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">undefined </li>
-                <li class="list-group-item">undefined </li>
-                <li class="list-group-item">undefined </li>
-                <li class="list-group-item">undefined </li>
-            </ul>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header"><b>undefined<b /></div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">undefined </li>
-                <li class="list-group-item">undefined </li>
-                <li class="list-group-item">undefined </li>
-                <li class="list-group-item">undefined </li>
+                <li class="list-group-item">j </li>
+                <li class="list-group-item">j </li>
+                <li class="list-group-item">j </li>
+                <li class="list-group-item">j </li>
             </ul>
         </div> </main>
         </body>
