--- a/generatedHTML.html
+++ b/generatedHTML.html
@@ -17,21 +17,30 @@
             </header>
             <main> 
         <div class="card" style="width: 18rem;">
-            <div class="card-header"><b> "Manager" g</b></div>
+            <div class="card-header"><b>Manager: Bob</b></div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Name g </li>
-                <li class="list-group-item">h </li>
-                <li class="list-group-item">j </li>
-                <li class="list-group-item">k </li>
+                <li class="list-group-item">Name: Bob </li>
+                <li class="list-group-item">ID: 23 </li>
+                <li class="list-group-item">Email: bob@gmail.com </li>
+                <li class="list-group-item">Office: 34 </li>
             </ul>
         </div>
         <div class="card" style="width: 18rem;">
-            <div class="card-header"><b>j</b></div>
+            <div class="card-header"><b>Engineer: Tom</b></div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">j </li>
-                <li class="list-group-item">j </li>
-                <li class="list-group-item">j </li>
-                <li class="list-group-item">j </li>
+                <li class="list-group-item">Name: Tom </li>
+                <li class="list-group-item">ID: 45 </li>
+                <li class="list-group-item">Email: tom@gmail.com </li>
+                <li class="list-group-item">Github: github </li>
+            </ul>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header"><b>Intern: Alex</b></div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Name: Alex </li>
+                <li class="list-group-item">ID: 56 </li>
+                <li class="list-group-item">Email: al@gmail.com </li>
+                <li class="list-group-item">School:First </li>
             </ul>
         </div> </main>
         </body>
